Travis with Racket v6.7: not yet (soon)

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ env:
     - RACKET_VERSION=6.4
     - RACKET_VERSION=6.5
     - RACKET_VERSION=6.6
-    - RACKET_VERSION=6.7
+    #- RACKET_VERSION=6.7 # Not yet
     - RACKET_VERSION=HEAD
 
 matrix:
