--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ before_script:
 # `raco pkg install --deps search-auto` to install any required
 # packages without it getting stuck on a confirmation prompt.
 script:
- - raco test -x -p auto-syntax-e
+ - raco test -p auto-syntax-e
  - raco setup --check-pkg-deps --pkgs auto-syntax-e;
  - raco pkg install doc-coverage
  - raco doc-coverage auto-syntax-e
